--- a/Taller 7/style.css
+++ b/Taller 7/style.css
@@ -33,18 +33,18 @@ body {
 }
 
 .pure-g > div {
-    box-sizing: border-box;
+    box-sizing: border-box
 }
-
 
 form{
-    margin: 0 auto;
+    margin: 1% auto 1%;
     width: 500px;
     background-color:#ffffff;
-    color:rgb(59, 81,106);
-    padding: 50px;
+    color:rgb(18, 26, 36);
+    padding: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
 }
-
 
 .footerbottom{
 background: #68ca6d;
@@ -56,7 +56,7 @@ border-width: 1px;
 border-color: #039761;
 display: flex;
 align-items: center;
-justify-content: center
+justify-content: center;
 }
 
 .footerbottom p{
