--- a/Proyecto SPA/libreriafront/src/app/app.component.html
+++ b/Proyecto SPA/libreriafront/src/app/app.component.html
@@ -1,5 +1,16 @@
-<form [formGroup]="autorForm" (ngSubmit)="guardar()">
-<label>nombs</label>
-<input type="text"formControlName="nombre" class="form-control">
-</form>
+<div class="formularioRegistro">
+  <h2>Registro Autor</h2>
+  <form [formGroup]="autorForm" (ngSubmit)="guardar()">
+    <div class="form-group">
+    <label>Nombre</label>
+    <input type="text"formControlName="nombre" class="form-control">
+    </div>
+    <div class="form-group">
+      <label>id</label>
+      <input type="number"formControlName="Id" class="form-control">
+      </div>
+      <button type="submit" class="btn btn-primary">guardar</button>
+    </form>
+</div>
+
 <router-outlet></router-outlet>
