--- a/Proyecto SPA/libreriafront/src/app/app.component.html
+++ b/Proyecto SPA/libreriafront/src/app/app.component.html
@@ -1,16 +1,31 @@
 <div class="formularioRegistro">
   <h2>Registro Autor</h2>
-  <form [formGroup]="autorForm" (ngSubmit)="guardar()">
+  <form [formGroup]="LibroForm" (ngSubmit)="guardar()">
     <div class="form-group">
     <label>Nombre</label>
     <input type="text"formControlName="nombre" class="form-control">
     </div>
     <div class="form-group">
-      <label>id</label>
-      <input type="number"formControlName="Id" class="form-control">
-      </div>
+    <label>Paginas</label>
+    <input type="number"formControlName="paginas" class="form-control">
+    </div>
+    <div class="form-group">
+    <label>Año creacion</label>
+    <input type="number"formControlName="year_creacion" class="form-control">
+    </div>
+    <div class="form-group">
+    <label>Autor</label>
+    <input type="text"formControlName="Autor" class="form-control">
+    </div>
+    <div>
+    <label>Editorial</label>
+    <select type="text"formControlName="editorial" class="form-control">
+      <option value="item.id" *ngFor="let item of editorial"></option>
+    </select>
+    </div>
       <button type="submit" class="btn btn-primary">guardar</button>
     </form>
 </div>
+
 
 <router-outlet></router-outlet>
