--- a/Proyecto SPA/libreriafront/src/app/app.component.html
+++ b/Proyecto SPA/libreriafront/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="formularioRegistro">
-  <h2>Registro Autor</h2>
+  <h2>Registro Libro</h2>
   <form [formGroup]="LibroForm" (ngSubmit)="guardar()">
     <div class="form-group">
     <label>Nombre</label>
@@ -15,7 +15,7 @@
     </div>
     <div class="form-group">
     <label>Autor</label>
-    <input type="text"formControlName="Autor" class="form-control">
+    <input type="text"formControlName="autor" class="form-control">
     </div>
     <div>
     <label>Editorial</label>
