--- a/Proyecto SPA/libreriafront/src/app/app.component.html
+++ b/Proyecto SPA/libreriafront/src/app/app.component.html
@@ -26,6 +26,27 @@
       <button type="submit" class="btn btn-primary">guardar</button>
     </form>
 </div>
-
+<div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Id</th>
+        <th>Nombre</th>
+        <th>Numero de Paginas</th>
+        <th>año creacion</th>
+        <th>editorial</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of Libro">
+        <th>{{item.id}}</th>
+        <th>{{item.nombre}}</th>
+        <th>{{item.paginas}}</th>
+        <th>{{item.year_creacion}}</th>
+        <th>{{item.editorial.nombre}}</th>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 <router-outlet></router-outlet>
