--- a/Proyecto SPA/libreriafront/src/app/app.component.html
+++ b/Proyecto SPA/libreriafront/src/app/app.component.html
@@ -25,8 +25,40 @@
         <option [ngValue]="item" *ngFor="let item of editorial">{{item.nombre}}</option>
       </select>
     </div>
-    <button type="submit" class="btn btn-primary">guardar</button>
+    <button type="submit" class="btn btn-primary" [disabled]="LibroForm.invalid">guardar</button>
   </form>
+</div>
+
+<div class="formularioRegistro">
+<h2>Libros Registrados</h2>
+<div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Id</th>
+        <th>Nombre</th>
+        <th>Numero de Paginas</th>
+        <th>año creacion</th>
+        <th>editorial</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of libro">
+        <th>{{item.id}}</th>
+        <th>{{item.nombre}}</th>
+        <th>{{item.paginas}}</th>
+        <th>{{item.year_creacion}}</th>
+        <th>{{item.editorial.nombre}}</th>
+        <th>
+
+          <button type="submit" class="btn btn-success">Editar</button>
+          <button type="submit" class="btn btn-danger">Eliminar</button>
+
+        </th>
+      </tr>
+    </tbody>
+  </table>
+</div>
 </div>
 
 <router-outlet></router-outlet>
