--- a/Proyecto SPA/libreriafront/src/app/app.component.html
+++ b/Proyecto SPA/libreriafront/src/app/app.component.html
@@ -38,21 +38,23 @@
         <th>Id</th>
         <th>Nombre</th>
         <th>Numero de Paginas</th>
-        <th>año creacion</th>
-        <th>editorial</th>
+        <th>Año creacion</th>
+        <th>Autor</th>
+        <th>Editorial</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of libro">
+      <tr *ngFor="let item of libros">
         <th>{{item.id}}</th>
         <th>{{item.nombre}}</th>
         <th>{{item.paginas}}</th>
         <th>{{item.year_creacion}}</th>
+        <th>{{item.autor.nombre}}</th>
         <th>{{item.editorial.nombre}}</th>
         <th>
 
-          <button type="submit" class="btn btn-success">Editar</button>
-          <button type="submit" class="btn btn-danger">Eliminar</button>
+          <button type="submit" class="btn btn-success" (click)="editar(item)">Editar</button>
+          <button type="submit" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
 
         </th>
       </tr>
