--- a/Proyecto SPA/libreriafront/src/app/app.component.html
+++ b/Proyecto SPA/libreriafront/src/app/app.component.html
@@ -10,14 +10,16 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Arimo&family=Bebas+Neue&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Arimo&family=Lato&display=swap" rel="stylesheet">
     <title>Libreria</title>
   </head>
 
 <body>
 <div class="nav">
+  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.pinclipart.com%2Fpicdir%2Fbig%2F408-4088114_reading-relations-open-book-icon-clipart.png&f=1&nofb=1" alt="Logo libro" width="70" height="40">
   <h2>Libreria pacomemo</h2>
   <span>WEB-JJD</span>
+  <img src="https://i2.wp.com/www.violetastereo.com/wp/wp-content/uploads/2017/09/UIS-logo1.png?ssl=1" alt="Logo uis" width="120" height="50">
 </div>
 <div class="formularioRegistro">
   <h1>Registro de Libro</h1>
