--- a/Proyecto SPA/libreriafront/src/app/app.component.html
+++ b/Proyecto SPA/libreriafront/src/app/app.component.html
@@ -76,7 +76,7 @@
         <th>{{item.editorial.nombre}}</th>
         <th>
 
-          <button type="submit" class="btn btn-success" (click)="editar(item)">Editar</button>
+          <button type="submit" class="btn btn-success" (click)="editar(item)" id="editarbtn">Editar</button>
           <button type="submit" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
 
         </th>
